--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 	</head>
 	<body onload="main()">
 		<canvas id="myCanvas"></canvas>
-<pre id="overlay" onclick="removeOverlay()">
-<b>Drawing on the Canvas
-HTML Canvas, CSS and Javascript
-</b>
-
-</pre>
+<div id="overlay" onclick="removeOverlay()" style="font-family: Arial, Helvetica, sans-serif;">
+<center><b>Click to hear sound
+</b></center>
+</div>
 	</body>
 </html>
